--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.alibaba</groupId>
 	<artifactId>dubbo-parent</artifactId>
-	<version>2.8.4a</version>
+	<version>2.8.4-SIT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
 	<description>The parent project of dubbo</description>
@@ -724,7 +724,16 @@
 		</pluginManagement>
 
 	</build>
-
+	<distributionManagement>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://218.94.57.199:8081/content/repositories/snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>releases</id>
+			<url>http://218.94.57.199:8081/content/repositories/releases/</url>
+		</repository>
+	</distributionManagement>
 	<issueManagement>
 		<system>jira</system>
 		<url>http://code.alibabatech.com/jira/browse/DUBBO</url>
